Reemplazo de Stream.collect(Collectors.toList()) por Stream.toList() en la clase IUBusqueda.java